Fix overlap issue with long log-control labels in some localizations
In some localizations, the log control labels are too large so when the
screen size is smaller, there is not enough space for all the content
and part of it is wrapped. That part appeared over the actual logs. To
fix this, the labels are now shrinking when the window is resized. The
overflown text is hidden in ellipsis. Also, hovering the mouse over
the label reveals the full text.

SCREENSHOT: http://url/tt23

Reviewed-on: http://bellevue-ci.eng.vmware.com:8080/17294
Closures-Verified: jenkins <jenkins@vmware.com>
Upgrade-Verified: jenkins <jenkins@vmware.com>
Bellevue-Verified: jenkins <jenkins@vmware.com>
CS-Verified: jenkins <jenkins@vmware.com>

--- a/ui/app/src/styles/components/_container-details.scss
+++ b/ui/app/src/styles/components/_container-details.scss
@@ -193,6 +193,19 @@ $elements-side-margin: $elements-margin / 2;
     position: absolute;
     bottom: 0;
     left: 0;
+
+    div.radio-inline, div.select {
+      min-width: 60px;
+      max-width: 25%;
+    }
+
+    div.radio-inline label {
+      width: 100%;
+      white-space: nowrap;
+      vertical-align: bottom;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
 
   > .content > .container-details-logs .container-details-logs-settings .form-group {
